[gd_scene load_steps=2 format=3 uid="uid://bxdvr3jy8hmwn"]

[ext_resource type="Script" path="res://scenes/campfire/campfire.gd" id="1_1"]

[node name="Campfire" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.05, 0.05, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "üî• Fogueira de Descanso"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HPLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "‚ù§Ô∏è HP: 100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RestButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Descansar (+30 HP)"

[node name="UpgradeButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Melhorar Carta"

[node name="Spacer2" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="LeaveButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Sair sem A√ß√£o"
